[bdist_wheel]
universal = 1

[flake8]
max-line-length = 100
inline-quotes = double

[isort]
balanced_wrapping = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
not_skip=__init__.py
order_by_type = true

[metadata]
description-file = README.md

[semantic_release]
branch = master
version_variable = setup.py:version
upload_to_pypi = false
tag_format = release-{version}